<?xml version="1.0"?>
<package>
  <name>protobuf_comm</name>
  <version>0.0.1</version>
  <description>Catkinized protobuff_comm package.</description>

  <maintainer email="alexander.moriarty@brsu.de">Alexander Moriarty</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
