<?xml version="1.0"?>
<package>
  <name>cfh_robot</name>
  <version>0.1.0</version>
  <description>
    The Refbox Example package
  </description>
  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>
  <author email="shehzad.ahmedq@smail.inf.h-brs.de">Shehzad Ahmed</author>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>protobuf_comm</build_depend>
  <build_depend>rockin_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>protobuf_comm</run_depend>
  <run_depend>rockin_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
